# anti_loss_tag

./: .gitignore  AGENTS.md  BRANCHES.md  CHANGELOG.md  CODE_REVIEW.md  KT6368A 硬件开发文档（SOP-8）.md  LICENSE  MyApplication$3.java  MyApplication.java  PROJECT_REFACTORING_SUMMARY.md  README.md  SECURITY.md  hacs.json  optimization_plan.md  pyproject.toml  requirements-test.txt  requirements.txt  uuid.md
.github/workflows/: hacs.yml
archive/: DEPRECATED.md  DOCS_FIX_REPORT.md  OPTIMIZATION_COMPLETE_REPORT.md  README.md
archive/modules/: README.md  ble.py  coordinator.py
archive/old_versions/v1/: binary_sensor.py  button.py  connection_manager.py  device.py  event.py  sensor.py
archive/old_versions/v2/: __init__.py  ble.py  manifest.json  switch.py
archive/reference_docs/: KT6368A 定制固件 通用 Python 开发文档.md
archive/reports/audit/: 2026-02-06-code-audit-report.md  2026-02-06-optimization-execution-log.md  2026-02-06-optimization-plan.md  README.md
archive/reports/docs/: README.md
archive/temp_files/: init_git.sh
custom_components/anti_loss_tag/: __init__.py  binary_sensor.py  ble.py  button.py  config_flow.py  connection_manager.py  const.py  coordinator.py  device.py  diagnostics.py  entity_mixin.py  event.py  manifest.json  requirements.txt  sensor.py  strings.json  switch.py
custom_components/anti_loss_tag/translations/: strings.json  zh-Hans.json
docs/: DATA_UPDATE.md  DEVELOPMENT_LESSONS.md  FIX_OPTIMIZATION_PLAN.md  KNOWN_LIMITATIONS.md  TECH_DEVELOPMENT_DOCUMENTATION.md  TROUBLESHOOTING.md  开发文档索引.md  源.md  索引.md  重要修复与技术发现.md  阶段2完成总结.md  阶段3完成总结.md  阶段4完成总结.md  风险排除修正整改方案.md
docs/BLE技术指南/: BLE通信架构分析.md  Python_BLE开发指南.md
docs/Java参考/: Java代码审核.md  Java到Python移植指南.md
docs/参考资料/: KT6368A固件文档.md  KT6368A硬件文档.md  Manifest2025标准.md
docs/归档/: CODE_REVIEW_REPORT.md  REFACTORING_PLAN.md
docs/归档/报告/: 文档修正记录.md  (+2 more)
docs/技术文档/: BLE协议实现指南.md  BLE协议规范.md  Python代码审查.md  开发规范.md  系统架构设计.md
docs/旧文档/: 快速参考.md  技术参考.md  文档索引.md
docs/用户文档/: 快速开始.md  故障排除.md  自动化示例.md  配置指南.md
tests/: __init__.py  conftest.py  test_config_flow_validation.py  test_constants.py  test_device_ble_operations.py  test_long_term_stability.py  test_multi_device_concurrency.py  test_parallel_updates_and_availability.py  test_runtime_data_usage.py  test_validation.py
translations/: zh-Hans.json
(+3 files in other folders)
